app/assets/stylesheets/controls.scss
.btn{
  cursor: pointer;
  padding: 3px 8px;
  border-radius: 4px;
  background: blue;
  color: white;
  margin-bottom: 5px;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;

  &:hover{
    background: red;
  }
}

.game_controls{
  display: flex;
  width: 200px;

  .btn{
    flex-basis: 48%;
    width: 48%;
    margin: 2%;
    padding: 5px 8px;

    &.active{
      background: red;
    }
  }
}

.map_controls{
  margin-left: 15px;
  margin-top: 39px;

  .controls{
    display: none;
  }
}

